--- a/index_chn.html
+++ b/index_chn.html
@@ -1,97 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>QLiu Works</title>
+    <title>QLiu Writings</title>
     <link rel="icon" type="image/jpg" href="images/ql.jpg">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <base href="https://qiangliu-2.github.io" target="_blank">
 
 	<link rel="stylesheet" type="text/css" media="all" href="utils/ql_gemini.css">
 </head>
 <body>
     <table width="100%" cellpadding="0" cellspacing="0">
-<tbody><tr><td width=30%></td><td width=40% align="center"><b>Dr. Liu's Webpage</b></td><td align="right"><a href="index.html">English version</a></td></tr></tbody></table><div class="container">        <div class="column">
-            <h2 class="section-title">编程技巧</h2>
-            <h3 class="subsection-title">Python</h3>
+<tbody><tr><td width=30%></td><td width=40% align="center"><b>Dr. Liu's Articles & Translations</b></td><td align="right"><a href="index.html">English version</a></td></tr></tbody></table><div class="container">        <div class="column">
+            <h2 class="section-title">热点话题</h2>
+            <h3 class="subsection-title">小知</h3>
             <ul class="link-list">
-                <li><a href="https://github.com/qiangliu-sd/ai-agent-LangGraph" title="A beach-town weather AI agent with all necessary details" target="_blank">基于LangGraph的<b>智能体</b>:可运行实例</a></li>
-                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_enforced-validate.md" title="1. Bulletproof enforced validating of Entry widgets
-2. Dynamic validating of ranges (or bounds) of user inputs via Entry widgets" target="_blank">基于JSON的Tkinter界面之输入强制校验</a></li>
-                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_free-msg-box.md" title="Free-standing (non-blocking) message box
-pop-up (and pop-off) message box  
-ttk.Button & status bar" target="_blank">独立对话窗、弹出窗及Tkinter小技巧</a></li>
-                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_timezone.md" title="convert a time-zone meeting time to your local computer time" target="_blank">Python中把时区字符串变成本地时间</a></li>
-                <li><a href="ql_md_template.html?my.md=coding/proglangs/py-script.md" title="A working example with Button & Input working with PyScript" target="_blank">HTML中的PyScript:可运行实例</a></li>
+                <li><a href="ql_md_template.html?my.md=qpedia/github-web-server.md" title="Free and easy personal webpage" target="_blank">免费GitHub网站服务器</a></li>
+                <li><a href="ql_md_template.html?my.md=qpedia/frii-link-github.md" title="Now you get a real domain for FREE" target="_blank">免费frii域名桥接GitHub网站</a></li>
+                <li><a href="" title="" target="_blank">--------</a></li>
+                <li><a href="https://qiangliu2.substack.com/p/universities-with-three-plus-science" title="How often has a university appeared in Nobel Prize announcements for Physics, Chemistry, and Physiology or Medicine? Which institutions rank among the top 49?" target="_blank">三个以上教员获科学诺贝尔奖的大学</a></li>
+                <li><a href="https://qiangliu2.substack.com/p/universities-with-three-plus-science-71a" title="How many doctoral graduates from a university have won Nobel Prizes in Physics, Chemistry, and Physiology or Medicine? Which institutions rank among the top 53?" target="_blank">三个以上博士获科学诺贝尔奖的大学</a></li>
+                <li><a href="https://qiangliu2.substack.com/p/universities-with-3-science-nobelist" title="How often has a university appeared in Nobel Prize announcements for Physics, Chemistry, and Physiology or Medicine, and how many doctoral graduates from that university have won those Prizes? Which institutions rank among the top 36?" target="_blank">三个以上博士、教员获科学诺贝尔奖的大学</a></li>
             </ul>
-            <h3 class="subsection-title">C/C++与Python, Java, C#</h3>
+            <h3 class="subsection-title">生成式人工智能</h3>
             <ul class="link-list">
-                <li><a href="https://github.com/qiangliu-sd/Python-calls-C-Linux" title="Call Linux shared-object C (foreign) functions directly via ctypes inside Python: 
-A complete template" target="_blank">在Python中直接调用C函数(Linux)</a></li>
-                <li><a href="https://github.com/qiangliu-sd/Python-calls-C-dll" title="Call Windows C-dll (foreign) functions directly via ctypes inside Python: 
-A complete template" target="_blank">在Python中直接调用C函数</a></li>
-                <li><a href="https://github.com/qiangliu-sd/Java-calls-C-dll" title="Call Windows C-dll (foreign) functions in Java: 
-A complete template" target="_blank">在Java中直接调用C函数</a></li>
-                <li><a href="https://github.com/qiangliu-sd/CSharp-calls-C-dll" title="Call Windows C-dll (foreign) functions in C#: 
-A complete template" target="_blank">在C#中直接调用C函数</a></li>
-                <li><a href="https://github.com/qiangliu-sd/Cpp-Inside-Python" title="Implement a Py-method in C++: 
-A full example" target="_blank">用C++编写Python函数</a></li>
+                <li><a href="ql_md_template.html?my.md=qpedia/can-LLM-trusted.md" title="No！ Use with care" target="_blank">大语言模型可信吗？</a></li>
             </ul>
-            <h3 class="subsection-title">软件工程</h3>
+            <h3 class="subsection-title">加州之最</h3>
             <ul class="link-list">
-                <li><a href="ql_md_template.html?my.md=coding/AI/what-wrong-w-ai-codes.md" title="Bad styles, bad implementation, inefficient double loops, and other issues" target="_blank">AI代码会错在何处：一？</a></li>
-                <li><a href="ql_md_template.html?my.md=coding/AI/what-wrong-w-ai-codes2.md" title="Gemini can do better, if you push it" target="_blank">AI代码会错在何处：二？</a></li>
-                <li><a href="ql_md_template.html?my.md=coding/AI/what-wrong-w-ai-codes3.md" title="Claude identified most of the defects as presented in Part 1 of this series" target="_blank">AI代码会错在何处：三？</a></li>
-                <li><a href="ql_md_template.html?my.md=coding/proglangs/aiagent_vs_apps.md" title="A LLM with tools is called an AI agent" target="_blank"><b>智能体</b>与传统App:简单对比</a></li>
-                <li><a href="ql_md_template.html?my.md=coding/AI/ai-no-replace-coder.md" title="1. Software developers will not be replaced by LLM-AI 
-2. LLM-AI can be an excellent assistant to developers" target="_blank">大语言模型会取代程序员吗？</a></li>
-                <li><a href="ql_md_template.html?my.md=coding/proglangs/can_py_beat_cpp.md" title="C++ significantly outperforms NumPy (and Python) for both small and big arrays" target="_blank">Python能比C++更快吗？</a></li>
-                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_entangle.md" title="C++ extensions can be an excellent solution to the problem of Python parallel entanglement" target="_blank">解决Python并行纠缠减慢的C++方案</a></li>
-                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_free-thread-entangle.md" title="No, at least for the problem I tested here
-Worse, free threading is even slower than GIL builds" target="_blank">自由线程是否解决了Python并行纠缠的问题？</a></li>
-                <li><a href="https://drive.google.com/file/d/1koxO84BpixDfCNESbTSr-IF7zhRBcDAh/view?usp=drive_link" title="Reusing Stubborn Algorithms: Packaging is the Key
-Feature article on the cover, C/C++ Users Journal 6, 22-29, 2001" target="_blank">数学算法可重复使用的C++方案</a></li>
+                <li><a href="https://qiangliu2.substack.com/p/76b" title="加州获得科学类诺奖的人数仅次于美国，排世界第二" target="_blank">加州之世界一流高等教育</a></li>
+                <li><a href="ql_md_template.html?my.md=usa/ca/fast-food-birthplace.md" title="加州是美国快餐发源之都" target="_blank">加州之美国快餐发源地</a></li>
+            </ul>
+            <h2 class="section-title">经济谈</h2>
+            <h3 class="subsection-title">稳定（代）币</h3>
+            <ul class="link-list">
+                <li><a href="econ/cryptoccy/stablecoin.html" title="稳定币并非法定货币，风险很大" target="_blank">货币、加密币与稳定币</a></li>
+                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="是时候揭穿加密币的真面目了：一个犯罪行当" target="_blank"><b>诺奖得主</b>克鲁格曼:华府数字腐败</a></li>
+                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="加密币是经济学家所说的纯泡沫，一种内在价值为零的资产" target="_blank"><b>诺奖得主</b>梯若尔:加密币 纯泡沫</a></li>
+                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/BIS-stablecoin.md" title="国际清算银行（BIS）--常被称为中央银行的央行，在其2025年6月24日发布的年度经济报告中，对稳定币的货币属性提出了严肃质疑，称稳定币在衡量货币的三个关键标准上均不过关" target="_blank">国际清算银行:稳定币非币</a></li>
             </ul>
         </div>
         <div class="column">
-            <h2 class="section-title">我贡献的免费小法宝</h2>
-            <h3 class="subsection-title">开发Apps</h3>
+            <h2 class="section-title">工作论文</h2>
+            <h3 class="subsection-title">衍生产品</h3>
             <ul class="link-list">
-                <li><a href="mdEditView.html" title="An extremely simple markdown tool" target="_blank">在浏览器里编辑markdown文件[点击<b>收藏</b>]</a></li>
-                <li><a href="markdownView.html" title="An extremely simple markdown viewer" target="_blank">在浏览器里查看markdown文件[点击<b>收藏</b>]</a></li>
-                <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a HTTP server" target="_blank">在自家的Windows电脑上测试<b>网页</b></a></li>
+                <li><a href="http://arxiv.org/abs/1912.10380" title="The dual equation has exactly the same form as the BSM equation
+All puts can be priced as their corresponding calls by simply swapping stock price (dividend yield) for strike price (risk-free rate) simultaneously" target="_blank">Black-Scholes-Merton对偶方程</a></li>
+                <li><a href="http://arxiv.org/abs/2405.11329" title="the first comprehensive study of options pricing under ABM" target="_blank">算术布朗运动下期权之风险中性估值</a></li>
             </ul>
-            <h3 class="subsection-title">开发技巧</h3>
+            <h3 class="subsection-title">投资</h3>
             <ul class="link-list">
-                <li><a href="https://github.com/qiangliu-sd/Windows11-self-signed-certificate" title="A working guide for signing a FILE using self-signed certificate on Windows 11" target="_blank">Windows11文件自签名逐步指南</a></li>
-                <li><a href="https://qiangliu-2.github.io/ql_md_template.html?my.md=qpedia/github-web-server.md" title="Free and easy personal webpage" target="_blank">GitHub免费网页服务器</a></li>
-                <li><a href="https://qiangliu-2.github.io/ql_md_template.html?my.md=qpedia/frii-link-github.md" title="Now you get a real domain for FREE" target="_blank">将免费frii域名指向GitHub网页</a></li>
+                <li><a href="http://arxiv.org/abs/2405.10917" title="No
+We propose an estimation based on fund sizes and trading profits and obtain a compounded return of 31.8% before fees" target="_blank">大奖章基金的年化复利收益高于35%吗？</a></li>
             </ul>
-            <h3 class="subsection-title">办公Apps</h3>
+            <h3 class="subsection-title">资产定价</h3>
             <ul class="link-list">
-                <li><a href="https://github.com/qiangliu-sd/life-events-organizer" title="1. Annual events
-2. Count downs
-3. Routine reminders
-4. Renewals
-5. Birthdays
-6. To-do list
-7. Two noticing-period events" target="_blank">管理生活中的要事</a></li>
-                <li><a href="https://github.com/qiangliu-sd/docx-pdf-merger" title="1. Order files by dragging files up or down vertically
-2. Remove a file by double-click" target="_blank">将docx文件、pdf文件合并为pdf</a></li>
-                <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a WEB server to share files across LAN" target="_blank">通过浏览器共享局域网上的<b>文件夹</b></a></li>
+                <li><a href="http://arxiv.org/abs/2405.10920" title="Raise provocative questions about mainstream asset pricing by focusing on  definitions of returns for possible investment portfolios" target="_blank">数据生成过程与时间序列资产定价</a></li>
             </ul>
-            <h3 class="subsection-title">趣味Apps</h3>
+            <h2 class="section-title">发表论文</h2>
+            <h3 class="subsection-title">衍生产品</h3>
             <ul class="link-list">
-                <li><a href="https://github.com/qiangliu-sd/longScreenshot" title="Save a multiple-page webpage as long imagine file" target="_blank">保存特长网页为图片</a></li>
-                <li><a href="https://github.com/qiangliu-sd/solar-lunar-date-tool" title="Work for Year 1901 to Year 2099" target="_blank">公历、农历转换器</a></li>
+                <li><a href="https://www.proquest.com/openview/2be03fbe6deff07a799f6bb7bd93405b/1?pq-origsite=gscholar&cbl=32822" title="Journal of Derivatives" target="_blank">已知红利之股票期权的准确二叉树定价(被<b>欧洲Voyager资产管理</b>采用）</a></li>
+                <li><a href="https://www.sciencedirect.com/science/article/pii/S1062940820301194" title="North American Journal of Economics and Finance" target="_blank">n天中m天条款的极佳近似（被<b>美国Imagine软件公司</b>采用)</a></li>
+                <li><a href="papers/ql-papers.html" title="Journal of Derivatives: 4
+Journal of Futures Markets: 4
+Journal of Banking & Finance: 1
+North American Journal of Economics and Finance: 3" target="_blank">更多衍生产品论文（2010-2025年）</a></li>
             </ul>
-            <h3 class="subsection-title">火箭科学家之金融</h3>
+            <h3 class="subsection-title">化学</h3>
             <ul class="link-list">
-                <li><a href="https://github.com/qiangliu-sd/cvt-bond-pricer" title="1.Include my own algorithm (CRP) for provisional call/put
-2. Finite difference solving the BSM or AFV PDE
-3. Suitable for US or China market
-4. Output price, delta, and gamma at once
-5. Compute implied volatility
-6. Include or exclude CB clauses easily" target="_blank">可转换债券C++高效定价系统</a></li>
+                <li><a href="papers/ql-papers.html" title="Journal of the American Chemical Society: 4
+The Journal of Physical Chemistry: 2" target="_blank">化学论文7篇（1994-1997年）</a></li>
+            </ul>
+            <h3 class="subsection-title">软件工程</h3>
+            <ul class="link-list">
+                <li><a href="papers/CppUsersJ-Jun2001-QLiu.pdf" title="Reusing Stubborn Algorithms: Packaging is the Key
+Feature article on the cover, C/C++ Users Journal 6, 22-29, 2001" target="_blank">可重复使用数学算法的C++方案</a></li>
             </ul>
         </div>
     </div></body></html>
