--- a/index.html
+++ b/index.html
@@ -1,81 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>QLiu Writings</title>
+    <title>QLiu Works</title>
     <link rel="icon" type="image/jpg" href="images/ql.jpg">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <base href="https://qiangliu-2.github.io" target="_blank">
 
 	<link rel="stylesheet" type="text/css" media="all" href="utils/ql_gemini.css">
 </head>
 <body>
     <table width="100%" cellpadding="0" cellspacing="0">
-<tbody><tr><td width=30%></td><td width=40% align="center"><b>Dr. Liu's Articles & Translations</b></td><td align="right"><a href="index_chn.html">中文版</a></td></tr></tbody></table><div class="container">        <div class="column">
-            <h2 class="section-title">Hot Topics</h2>
-            <h3 class="subsection-title">Know-how</h3>
+<tbody><tr><td width=30%></td><td width=40% align="center"><b>Dr. Liu's Webpage</b></td><td align="right"><a href="index_chn.html">中文版</a></td></tr></tbody></table><div class="container">        <div class="column">
+            <h2 class="section-title">Programming Techniques</h2>
+            <h3 class="subsection-title">Python</h3>
             <ul class="link-list">
-                <li><a href="ql_md_template.html?my.md=qpedia/github-web-server.md" title="Free and easy personal webpage" target="_blank">Use GitHub as a free web server</a></li>
-                <li><a href="ql_md_template.html?my.md=qpedia/frii-link-github.md" title="Now you get a real domain for FREE" target="_blank">Link free frii.site domain to GitHub pages</a></li>
-                <li><a href="" title="" target="_blank">--------</a></li>
-                <li><a href="https://qiangliu2.substack.com/p/universities-with-three-plus-science" title="How often has a university appeared in Nobel Prize announcements for Physics, Chemistry, and Physiology or Medicine? Which institutions rank among the top 49?" target="_blank">Universities with 3-plus science Nobelist affiliations</a></li>
-                <li><a href="https://qiangliu2.substack.com/p/universities-with-three-plus-science-71a" title="How many doctoral graduates from a university have won Nobel Prizes in Physics, Chemistry, and Physiology or Medicine? Which institutions rank among the top 53?" target="_blank">Universities with 3-plus science Nobelist doctoral graduates</a></li>
-                <li><a href="https://qiangliu2.substack.com/p/universities-with-3-science-nobelist" title="How often has a university appeared in Nobel Prize announcements for Physics, Chemistry, and Physiology or Medicine, and how many doctoral graduates from that university have won those Prizes? Which institutions rank among the top 36?" target="_blank">Universities with 3+ science Nobelist affiliations & 3+ doctoral graduates</a></li>
+                <li><a href="https://github.com/qiangliu-sd/ai-agent-LangGraph" title="A beach-town weather AI agent with all necessary details" target="_blank"><b>AI agents</b> with LangGraph: A working example</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_enforced-validate.md" title="1. Bulletproof enforced validating of Entry widgets
+2. Dynamic validating of ranges (or bounds) of user inputs via Entry widgets" target="_blank">Enforced Tkinter-validating with JSON</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_free-msg-box.md" title="Free-standing (non-blocking) message box
+pop-up (and pop-off) message box  
+ttk.Button & status bar" target="_blank">Free-standing message box, popup, & Tkinter tricks</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_timezone.md" title="convert a time-zone meeting time to your local computer time" target="_blank">Turn a time-zone string into local time: Python</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/py-script.md" title="A working example with Button & Input working with PyScript" target="_blank">PyScript in HTML: A working example</a></li>
             </ul>
-            <h3 class="subsection-title">Generative AI</h3>
+            <h3 class="subsection-title">C/C++ with Python, Java, C#</h3>
             <ul class="link-list">
-                <li><a href="ql_md_template.html?my.md=qpedia/can-LLM-trusted.md" title="No！ Use with care" target="_blank">Can LLMs be trusted?</a></li>
-            </ul>
-            <h3 class="subsection-title">California the Exceptional</h3>
-            <ul class="link-list">
-                <li><a href="https://qiangliu2.substack.com/p/76b" title="加州获得科学类诺奖的人数仅次于美国，排世界第二" target="_blank">California's world-class universities</a></li>
-                <li><a href="ql_md_template.html?my.md=usa/ca/fast-food-birthplace.md" title="加州是美国快餐发源之都" target="_blank">California, the birthplace of American's fast food</a></li>
-            </ul>
-            <h2 class="section-title">Economics</h2>
-            <h3 class="subsection-title">Stablecoin</h3>
-            <ul class="link-list">
-                <li><a href="econ/cryptoccy/stablecoin.html" title="稳定币并非法定货币，风险很大" target="_blank">货币、加密币与稳定币</a></li>
-                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="是时候揭穿加密币的真面目了：一个犯罪行当" target="_blank"><b>诺奖得主</b>克鲁格曼:华府数字腐败</a></li>
-                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="加密币是经济学家所说的纯泡沫，一种内在价值为零的资产" target="_blank"><b>诺奖得主</b>梯若尔:加密币 纯泡沫</a></li>
-                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/BIS-stablecoin.md" title="国际清算银行（BIS）--常被称为中央银行的央行，在其2025年6月24日发布的年度经济报告中，对稳定币的货币属性提出了严肃质疑，称稳定币在衡量货币的三个关键标准上均不过关" target="_blank">国际清算银行:稳定币非币</a></li>
-            </ul>
-        </div>
-        <div class="column">
-            <h2 class="section-title">Working Papers</h2>
-            <h3 class="subsection-title">Derivatives</h3>
-            <ul class="link-list">
-                <li><a href="http://arxiv.org/abs/1912.10380" title="The dual equation has exactly the same form as the BSM equation
-All puts can be priced as their corresponding calls by simply swapping stock price (dividend yield) for strike price (risk-free rate) simultaneously" target="_blank">The Black-Scholes-Merton dual equation</a></li>
-                <li><a href="http://arxiv.org/abs/2405.11329" title="the first comprehensive study of options pricing under ABM" target="_blank">Risk-neutral valuation of options under arithmetic Brownian motions</a></li>
-            </ul>
-            <h3 class="subsection-title">Investing</h3>
-            <ul class="link-list">
-                <li><a href="http://arxiv.org/abs/2405.10917" title="No
-We propose an estimation based on fund sizes and trading profits and obtain a compounded return of 31.8% before fees" target="_blank">Is the annualized compounded return of Medallion over 35%?</a></li>
-            </ul>
-            <h3 class="subsection-title">Asset Pricing</h3>
-            <ul class="link-list">
-                <li><a href="http://arxiv.org/abs/2405.10920" title="Raise provocative questions about mainstream asset pricing by focusing on  definitions of returns for possible investment portfolios" target="_blank">Data-generating process and time-series asset pricing</a></li>
-            </ul>
-            <h2 class="section-title">Publications</h2>
-            <h3 class="subsection-title">Derivatives</h3>
-            <ul class="link-list">
-                <li><a href="https://www.proquest.com/openview/2be03fbe6deff07a799f6bb7bd93405b/1?pq-origsite=gscholar&cbl=32822" title="Journal of Derivatives" target="_blank">A simple accurate binomial tree for pricing options on stocks with known dollar dividends (used by <b>Voyager Capital Management</b>)</a></li>
-                <li><a href="https://www.sciencedirect.com/science/article/pii/S1062940820301194" title="North American Journal of Economics and Finance" target="_blank">An excellent approximation for the m out of n day provision (used by <b>Imagine Software</b>)</a></li>
-                <li><a href="papers/ql-papers.html" title="Journal of Derivatives: 4
-Journal of Futures Markets: 4
-Journal of Banking & Finance: 1
-North American Journal of Economics and Finance: 3" target="_blank"><b>More</b> derivatives papers (2010-2025)</a></li>
-            </ul>
-            <h3 class="subsection-title">Chemistry</h3>
-            <ul class="link-list">
-                <li><a href="papers/ql-papers.html" title="Journal of the American Chemical Society: 4
-The Journal of Physical Chemistry: 2" target="_blank">Seven chemistry papers (1994-1997)</a></li>
+                <li><a href="https://github.com/qiangliu-sd/Python-calls-C-Linux" title="Call Linux shared-object C (foreign) functions directly via ctypes inside Python: 
+A complete template" target="_blank">Python directly calls C functions <b>Linux</b></a></li>
+                <li><a href="https://github.com/qiangliu-sd/Python-calls-C-dll" title="Call Windows C-dll (foreign) functions directly via ctypes inside Python: 
+A complete template" target="_blank">Python directly calls C functions</a></li>
+                <li><a href="https://github.com/qiangliu-sd/Java-calls-C-dll" title="Call Windows C-dll (foreign) functions in Java: 
+A complete template" target="_blank">Java directly calls C functions</a></li>
+                <li><a href="https://github.com/qiangliu-sd/CSharp-calls-C-dll" title="Call Windows C-dll (foreign) functions in C#: 
+A complete template" target="_blank">C# directly calls C functions</a></li>
+                <li><a href="https://github.com/qiangliu-sd/Cpp-Inside-Python" title="Implement a Py-method in C++: 
+A full example" target="_blank">Use C++ to code Py-method for Python</a></li>
             </ul>
             <h3 class="subsection-title">Software Engineering</h3>
             <ul class="link-list">
-                <li><a href="papers/CppUsersJ-Jun2001-QLiu.pdf" title="Reusing Stubborn Algorithms: Packaging is the Key
+                <li><a href="ql_md_template.html?my.md=coding/AI/what-wrong-w-ai-codes.md" title="Bad styles, bad implementation, inefficient double loops, and other issues" target="_blank">What can be wrong with code written by AI: Part 1?</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/AI/what-wrong-w-ai-codes2.md" title="Gemini can do better, if you push it" target="_blank">What can be wrong with code written by AI: Part 2?</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/AI/what-wrong-w-ai-codes3.md" title="Claude identified most of the defects as presented in Part 1 of this series" target="_blank">What can be wrong with code written by AI: Part 3?</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/aiagent_vs_apps.md" title="A LLM with tools is called an AI agent" target="_blank"><b>AI agents</b> vs traditional apps: A quick comparison</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/AI/ai-no-replace-coder.md" title="1. Software developers will not be replaced by LLM-AI 
+2. LLM-AI can be an excellent assistant to developers" target="_blank">Will software developers be replaced by LLM-AI?</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/can_py_beat_cpp.md" title="C++ significantly outperforms NumPy (and Python) for both small and big arrays" target="_blank">Can Python outperform C++?</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_entangle.md" title="C++ extensions can be an excellent solution to the problem of Python parallel entanglement" target="_blank">Python parallel entanglement: A C++ solution</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_free-thread-entangle.md" title="No, at least for the problem I tested here
+Worse, free threading is even slower than GIL builds" target="_blank">Does <b>free threading</b> solve parallel entanglement?</a></li>
+                <li><a href="https://drive.google.com/file/d/1koxO84BpixDfCNESbTSr-IF7zhRBcDAh/view?usp=drive_link" title="Reusing Stubborn Algorithms: Packaging is the Key
 Feature article on the cover, C/C++ Users Journal 6, 22-29, 2001" target="_blank">Implementing C++ reusable mathematical procedures</a></li>
+            </ul>
+        </div>
+        <div class="column">
+            <h2 class="section-title">My FREE Apps for You</h2>
+            <h3 class="subsection-title">Dev Apps</h3>
+            <ul class="link-list">
+                <li><a href="mdEditView.html" title="An extremely simple markdown tool" target="_blank">Edit markdown files in a browser [Click & <b>bookmark</b>]</a></li>
+                <li><a href="markdownView.html" title="An extremely simple markdown viewer" target="_blank">View markdown files via a browser [Click & <b>bookmark</b>]</a></li>
+                <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a HTTP server" target="_blank">Test <b>HTML</b> files on your own Windows PC</a></li>
+            </ul>
+            <h3 class="subsection-title">Dev Know-how</h3>
+            <ul class="link-list">
+                <li><a href="https://github.com/qiangliu-sd/Windows11-self-signed-certificate" title="A working guide for signing a FILE using self-signed certificate on Windows 11" target="_blank">Self-sign certificate on Windows11: A working guide</a></li>
+                <li><a href="https://qiangliu-2.github.io/ql_md_template.html?my.md=qpedia/github-web-server.md" title="Free and easy personal webpage" target="_blank">Use GitHub as a free web server</a></li>
+                <li><a href="https://qiangliu-2.github.io/ql_md_template.html?my.md=qpedia/frii-link-github.md" title="Now you get a real domain for FREE" target="_blank">Link free frii.site domain to GitHub pages</a></li>
+            </ul>
+            <h3 class="subsection-title">Office Apps</h3>
+            <ul class="link-list">
+                <li><a href="https://github.com/qiangliu-sd/life-events-organizer" title="1. Annual events
+2. Count downs
+3. Routine reminders
+4. Renewals
+5. Birthdays
+6. To-do list
+7. Two noticing-period events" target="_blank">Manage your life events</a></li>
+                <li><a href="https://github.com/qiangliu-sd/docx-pdf-merger" title="1. Order files by dragging files up or down vertically
+2. Remove a file by double-click" target="_blank">Merge docx and/or pdf files into one pdf</a></li>
+                <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a WEB server to share files across LAN" target="_blank">Share your <b>folder</b> on LAN via a browser</a></li>
+            </ul>
+            <h3 class="subsection-title">FUN Apps</h3>
+            <ul class="link-list">
+                <li><a href="https://github.com/qiangliu-sd/longScreenshot" title="Save a multiple-page webpage as long imagine file" target="_blank">Take a long screenshot of a multiple-page webpage</a></li>
+                <li><a href="https://github.com/qiangliu-sd/solar-lunar-date-tool" title="Work for Year 1901 to Year 2099" target="_blank">Convert Gregorian date to/from Chinese lunar date</a></li>
+            </ul>
+            <h3 class="subsection-title">Rocket Finance</h3>
+            <ul class="link-list">
+                <li><a href="https://github.com/qiangliu-sd/cvt-bond-pricer" title="1.Include my own algorithm (CRP) for provisional call/put
+2. Finite difference solving the BSM or AFV PDE
+3. Suitable for US or China market
+4. Output price, delta, and gamma at once
+5. Compute implied volatility
+6. Include or exclude CB clauses easily" target="_blank">A C++ convertible bond pricing App</a></li>
             </ul>
         </div>
     </div></body></html>
