--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ A full example" target="_blank">Use C++ to code Py-method for Python</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/py_entangle.md" title="C++ extensions can be an excellent solution to the problem of Python parallel entanglement" target="_blank">Python parallel entanglement: A C++ solution</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/py_free-thread-entangle.md" title="No, at least for the problem I tested here
 Worse, free threading is even slower than GIL builds" target="_blank">Does <b>free threading</b> solve parallel entanglement?</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_entangle-final.md" title="C++ is faster than Python
+Parallelism in C++ is better" target="_blank">Python parallel entanglement: Final note</a></li>
                 <li><a href="https://drive.google.com/file/d/1koxO84BpixDfCNESbTSr-IF7zhRBcDAh/view?usp=drive_link" title="Reusing Stubborn Algorithms: Packaging is the Key
 Feature article on the cover, C/C++ Users Journal 6, 22-29, 2001" target="_blank">Implementing C++ reusable mathematical procedures</a></li>
             </ul>
