--- a/index_chn.html
+++ b/index_chn.html
@@ -45,9 +45,11 @@ A full example" target="_blank">用C++编写Python函数</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/AI/ai-no-replace-coder.md" title="1. Software developers will not be replaced by LLM-AI 
 2. LLM-AI can be an excellent assistant to developers" target="_blank">大语言模型会取代程序员吗？</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/can_py_beat_cpp.md" title="C++ significantly outperforms NumPy (and Python) for both small and big arrays" target="_blank">Python能比C++更快吗？</a></li>
-                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_entangle.md" title="C++ extensions can be an excellent solution to the problem of Python parallel entanglement" target="_blank">解决Python并行纠缠减慢的C++方案</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_entangle.md" title="C++ extensions can be an excellent solution to the problem of Python parallel entanglement" target="_blank">解决Python并行纠缠的C++方案</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/py_free-thread-entangle.md" title="No, at least for the problem I tested here
 Worse, free threading is even slower than GIL builds" target="_blank">自由线程是否解决了Python并行纠缠的问题？</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_entangle-final.md" title="C++ is faster than Python
+Parallelism in C++ is better" target="_blank">Python并行纠缠：终篇</a></li>
                 <li><a href="https://drive.google.com/file/d/1koxO84BpixDfCNESbTSr-IF7zhRBcDAh/view?usp=drive_link" title="Reusing Stubborn Algorithms: Packaging is the Key
 Feature article on the cover, C/C++ Users Journal 6, 22-29, 2001" target="_blank">数学算法可重复使用的C++方案</a></li>
             </ul>
