--- a/index_chn.html
+++ b/index_chn.html
@@ -64,7 +64,7 @@ Feature article on the cover, C/C++ Users Journal 6, 22-29, 2001" target="_blank
             </ul>
             <h3 class="subsection-title">开发技巧</h3>
             <ul class="link-list">
-                <li><a href="ql_md_template.html?my.md=coding/proglangs/cpp_debug_vs2026.md" title="Follow your header files to missing braces" target="_blank"></a></li>
+                <li><a href="ql_md_template.html?my.md=coding/devutils/cpp_debug_vs2026.md" title="Follow your header files to missing braces" target="_blank">如何调试Visual Studio指向标准库头文件的编译错误？</a></li>
                 <li><a href="https://github.com/qiangliu-sd/Windows11-self-signed-certificate" title="A working guide for signing a FILE using self-signed certificate on Windows 11" target="_blank">Windows11文件自签名逐步指南</a></li>
                 <li><a href="https://qiangliu-2.github.io/ql_md_template.html?my.md=qpedia/github-web-server.md" title="Free and easy personal webpage" target="_blank">GitHub免费网页服务器</a></li>
                 <li><a href="https://qiangliu-2.github.io/ql_md_template.html?my.md=qpedia/frii-link-github.md" title="Now you get a real domain for FREE" target="_blank">将免费frii域名指向GitHub网页</a></li>
